fixed jump

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,11 +1,10 @@
 @import 'tailwindcss';
 
-/* Smooth scrolling on mobile */
+/* Mobile scrolling optimization */
 html,
 body {
 	-webkit-overflow-scrolling: touch;
 	overscroll-behavior-y: none;
-	scroll-behavior: smooth;
 	height: 100%;
 }
 
